// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadItemWrapper should render ltr correctly with 10 items 1`] = `
<div>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 keUhmJ"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          1
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dYgNNo"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          2
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 keUhmJ"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          3
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dYgNNo"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          4
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 bOhhdK"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          5
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 iAohyw"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          6
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 efLOFq"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          7
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 iAohyw"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          8
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 efLOFq"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          9
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dvvbaz"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          10
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadItemWrapper should render rtl correctly with 10 items 1`] = `
<div>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 fUznEE"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۱
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 EihbL"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۲
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 fUznEE"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۳
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 EihbL"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۴
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 cgEA"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۵
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 ndXtY"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۶
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jEYThi"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۷
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 ndXtY"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۸
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jEYThi"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۹
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="GridComponent-nf79gm-0 bvkVj StyledGrid-u0d8kd-4 iLbAiY"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jmGdsg"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۱۰
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadLink should render ltr correctly 1`] = `
<div>
  <div
    class="StyledItem-u0d8kd-1 kYQuFW"
    dir="ltr"
  >
    <a
      class="StyledLink-u0d8kd-0 bBFoEo"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render rtl correctly 1`] = `
<div>
  <div
    class="StyledItem-u0d8kd-1 fkeZwt"
    dir="rtl"
  >
    <a
      class="StyledLink-u0d8kd-0 OTgcR"
      href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
    >
      لماذا يخجل البعض من اسم قريته في مصر؟
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render with last updated date correctly 1`] = `
<div>
  <div
    class="StyledItem-u0d8kd-1 kYQuFW"
    dir="ltr"
  >
    <a
      class="StyledLink-u0d8kd-0 bBFoEo"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
    <div
      class="TimestampWrapper-u0d8kd-2 hlECaE"
    >
      <time
        class="StyledTimestamp-um718p-0 kIQQTq"
        datetime="2019-03-01T14:00+00:00"
      >
        Last updated: 5th November 2016
      </time>
    </div>
  </div>
</div>
`;
